# mlir

include/mlir/Conversion/OpenACC/: ConvertOpenACCToGPU.h  ConvertOpenACCToSeq.h
include/mlir/Conversion/OpenACCToGPU/: ConvertOpenACCToGPU.h
include/mlir/Dialect/: CMakeLists.txt
include/mlir/Dialect/OpenACCOps/: CMakeLists.txt  OpenACCOps.h  OpenACCOps.td  Passes.h
lib/Conversion/: CMakeLists.txt
lib/Conversion/OpenACC/: CMakeLists.txt  OpenACCToGPU.cpp  OpenACCToGPU.td  OpenACCToGPUPass.cpp  OpenACCToSeqPass.cpp
lib/Conversion/OpenACCToGPU/: CMakeLists.txt  OpenACCToGPU.cpp  OpenACCToGPU.td  OpenACCToGPUPass.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/OpenACCOps/: CMakeLists.txt  DialectRegistration.cpp  OpenACCOps.cpp
test/Dialect/OpenACC/: ops.mlir  to-gpu.mlir  to-seq.mlir
tools/mlir-opt/: CMakeLists.txt
